Add user followings (subscribings) endpoint
